; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_unregister_relation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c_SPI_unregister_relation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@SPI_ERROR_ARGUMENT = common dso_local global i32 0, align 4
@_SPI_current = common dso_local global %struct.TYPE_7__* null, align 8
@SPI_OK_REL_UNREGISTER = common dso_local global i32 0, align 4
@SPI_ERROR_REL_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SPI_unregister_relation(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @SPI_ERROR_ARGUMENT, align 4
  store i32 %9, i32* %2, align 4
  br label %36

10:                                               ; preds = %1
  %11 = call i32 @_SPI_begin_call(i32 0)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  store i32 %15, i32* %2, align 4
  br label %36

16:                                               ; preds = %10
  %17 = load i8*, i8** %3, align 8
  %18 = call %struct.TYPE_6__* @_SPI_find_ENR_by_name(i8* %17)
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %4, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = icmp ne %struct.TYPE_6__* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %16
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** @_SPI_current, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @unregister_ENR(i32 %24, i32 %28)
  %30 = load i32, i32* @SPI_OK_REL_UNREGISTER, align 4
  store i32 %30, i32* %5, align 4
  br label %33

31:                                               ; preds = %16
  %32 = load i32, i32* @SPI_ERROR_REL_NOT_FOUND, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %31, %21
  %34 = call i32 @_SPI_end_call(i32 0)
  %35 = load i32, i32* %5, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %33, %14, %8
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @_SPI_begin_call(i32) #1

declare dso_local %struct.TYPE_6__* @_SPI_find_ENR_by_name(i8*) #1

declare dso_local i32 @unregister_ENR(i32, i32) #1

declare dso_local i32 @_SPI_end_call(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
